deployment/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: submariner-bot
spec:
  selector:
    app: submariner-bot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
